# Firmware-DriveHub-RP2040-zero-logitech-g27-ps4

./: CMakeLists.txt  Dockerfile.build  README.md
include/: ffb_forward.h  wheel_profiles.h
src/: ffb_forward.c  g27_translate.c  main.c
